istio/k8s/service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ecommerce-gateway
  namespace: ecommerce
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "ecommerce.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecommerce-vs
  namespace: ecommerce
spec:
  hosts:
    - "ecommerce.local"
  gateways:
    - ecommerce-gateway
  http:
    - match:
        - uri:
            prefix: /catalog
      route:
        - destination:
            host: catalog-service.ecommerce.svc.cluster.local
            port:
              number: 5001
    - match:
        - uri:
            prefix: /search
      route:
        - destination:
            host: search-service.ecommerce.svc.cluster.local
            port:
              number: 5002
    - match:
        - uri:
            prefix: /order
      route:
        - destination:
            host: order-service.ecommerce.svc.cluster.local
            port:
              number: 5003
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend-service.ecommerce.svc.cluster.local
            port:
              number: 5004
